fixed button alignment

--- a/css/joblube.css
+++ b/css/joblube.css
@@ -14,3 +14,7 @@
 #refine {
 	padding: 10px;
 }
+
+.btn {
+    vertical-align: top;
+}
